# hw06-min-zzy

./: .buildinfo  Makefile  README.md  _config.yml  _toc.yml  conf.py  genindex.html  index.html  index.ipynb  objects.inv  pyproj.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/.pytest_cache/: README.doctree
.github/workflows/: book.yml
.pytest_cache/: README.html
_sources/: index.ipynb
ligotools/: utils.py
ligotools/tests/: test_readligo.py  tests_readligo.py
