[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Minji Park
author_email     = minjipark214@gmail.com
description      = A Python library for LIGO
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, LIGO, LSC
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	numpy
	scipy
	matplotlib
	h5py

[options.packages.find]
exclude =
	examples*
    docs*
    ligotools.tests*